--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </head>
